# smsf-rag

./: README.md  _notes.txt  main.py  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
app/: main.py  main_prev_version.py
app/api/: dependencies.py  health.py  query.py
app/api/routes/: ingestion_endpoints.py  query.py  storage.py
app/core/: config.py  vectorstore.py
app/engine/: query_engine.py
app/ingestion/: ato_ruling.py  run_ingestion.py  sis_act.py  trust_deed.py  utils.py
app/prompts/: citation_guard.txt  legal_answer.txt  smsf_templates.py
app/schemas/: request.py
app/storage/: do_spaces.py
ingestion/: run.py
ingestion/chunkers/: sis_chunker.py
ingestion/parsers/: ato_parser.py  sis_parser.py  trust_deed_parser.py
ingestion/validators/: chunk_validator.py
ingestion_prev_version/: pipeline.py  run.py
ingestion_prev_version/parsers/: sis_parser.py
tests/: test_router.py
