[project]
name = "smsf-rag"
version = "0.1.0"
description = "SMSF compliance RAG system"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Dependencies will be added here
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "llama-index>=0.14.12",
    "llama-index-extractors-entity>=0.4.1",
    "llama-index-llms-openai>=0.6.12",
    "llama-index-readers-file>=0.5.6",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "llama-parse>=0.6.54",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests",  # Production packages
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest",    # Testing
    "ruff",      # Modern linter/formatter (replaces black)
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*"]
exclude = ["data*", "prompts*"]
